-- update - 2025.11.20

- feat(centralized): Multi-registry support for container detection (Docker Hub + GHCR)
- feat(centralized): SERVER_IMAGE now accepts multiple images separated by spaces or commas
- feat(centralized): Container list display before restart for better visibility
- fix(centralized): Container restart iteration failing after first container with set -e

-- update - 2025.11.19

- feat(entrypoint): Added GDB remote debugging support with automatic process attachment
- feat(egg): Added GDB_DEBUG_PORT variable for IDA Pro and GDB client integration
- feat(entrypoint): Automatic CS2 process detection and gdbserver initialization on specified port
- docs: Added comprehensive GDB debugging documentation with IDA Pro setup guide
- docs: Documented server lock behavior and remote debugging workflow

-- update - 2025.11.14

- feat(centralized): Wings API integration for seamless Pterodactyl server restarts
- feat(centralized): Automatic SSL/non-SSL detection from Wings configuration
- feat(centralized): --simulate flag to test restart logic without downloading CS2 updates
- feat(centralized): Only restarts running servers (stopped servers remain stopped intentionally)
- feat(build): GitHub Container Registry (ghcr.io) publishing support with unlimited pulls
- feat(build): -g/--ghcr flag for GitHub Container Registry, -a/--all for both registries
- feat(build): Pre-build validation for shell script syntax and source dependencies
- feat(egg): Hidden PREFIX_TEXT variable to customize log prefix text (default: KitsuneLab)
- feat(entrypoint): Automatic crash detection with troubleshooting guide for common issues
- refactor(build): Changed -P flag to -d/--dockerhub for explicit registry selection
- refactor(build): Replaced emoji symbols with simple text symbols for consistency
- refactor(egg): Default Docker image changed to GitHub Container Registry (ghcr.io/k4ryuu/cs2-egg)
- optimise(build): Credential caching for GHCR (no repeated authentication needed)